Fix whitespace

--- a/app/assets/stylesheets/views/tasks/nomenclature/browse.scss
+++ b/app/assets/stylesheets/views/tasks/nomenclature/browse.scss
@@ -1,5 +1,4 @@
 #browse-view {
-
   .filter-button-open {
     transform: rotate(180deg);
   }
@@ -14,7 +13,7 @@
 
   .nav-column {
     width: 400px;
-    min-width: 270px
+    min-width: 270px;
   }
 
   .citations {
@@ -50,6 +49,10 @@
     margin-left: 5px;
   }
 
+  .history__record [data-radial-annotator] {
+    @extend .margin-small-left;
+  }
+
   .taxonomic_history,
   .citations {
     .annotation__note {
@@ -61,22 +64,22 @@
     width: 600px;
   }
   .history__origin {
-    color: #FFF;
+    color: #fff;
     padding-left: 7px;
     padding-right: 7px;
     margin-right: 4px;
     border-radius: 3px;
     &.protonym {
-      background-color: #7986CB;
+      background-color: #7986cb;
     }
     &.combination {
-      background-color: #FFB74D;
+      background-color: #ffb74d;
     }
     &.taxon_name_relationship {
-      background-color: #9575CD;
+      background-color: #9575cd;
     }
     &.error {
-      background-color: #A1887F;
+      background-color: #a1887f;
     }
   }
 
